# cats_samsar

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md  cats.files  cats.includes
cmake/modules/: FindAseba.cmake  FindG2O.cmake
config/: cats2-epfl-circular-open.xml  cats2-epfl-discrete-circular.xml
config/setup/: epfl-circular-open-small.xml  epfl-circular-open.xml
config/trajectories/: circle-velocities.xml
scripts/: installV4LLausanneSetup.sh
source/common/: AgentState.hpp
source/robot-control/: CMakeLists.txt  ControlLoop.cpp  ControlModeStateMachine.cpp  ControlModeStateMachine.hpp  FishBot.cpp  FishBot.hpp
source/robot-control/aesl/: Fish_bot_B.aesl  Fish_bot_C.aesl  Fish_bot_E.aesl  Fish_bot_H.aesl  Fish_bot_L.aesl  Fish_bot_model.aesl
source/robot-control/control-modes/: ControlModeType.hpp  ControlTarget.hpp  DensestPoint.cpp  DensestPoint.hpp  FishModelBase.cpp  FishModelBase.hpp  GenericFishModel.cpp  PositionListener.cpp  PositionListener.hpp  PositionSubscriber.cpp  PositionSubscriber.hpp  SocialFishControlMode.cpp  SocialFishControlMode.hpp  ToulouseControlMode.cpp  ToulouseControlMode.hpp  Trajectory.cpp  WheelVelocities.cpp  WheelVelocities.hpp
source/robot-control/experiment-controllers/: ControlArea.hpp  ExperimentController.hpp
source/robot-control/interfaces/: DBusInterface.hpp
source/robot-control/navigation/: Navigation.cpp  Navigation.hpp
source/robot-control/navigation/elastic-band/: CMakeLists.txt  Distances.hpp  EquivalenceClass.hpp  GraphSearchInterface.cpp  GraphSearchInterface.hpp  HSignature.hpp  HomotopyClassPlanner.cpp  HomotopyClassPlanner.hpp  Misc.hpp  Obstacles.cpp  Obstacles.hpp  PlannerInterface.hpp  PoseSE2.hpp  RecoveryBehaviors.cpp  RecoveryBehaviors.hpp  RobotFootprintModel.hpp  TebConfig.cpp  TebConfig.hpp  TebLocalPlannerROS.cpp  TebLocalPlannerROS.hpp  TebPlanner.cpp  TebPlanner.hpp  TebPlot.cpp  TebPlot.hpp  TebVisualization.cpp  TebVisualization.hpp  TestOptimNode.cpp  TimedElasticBand.cpp  TimedElasticBand.hpp
source/robot-control/navigation/elastic-band/g2o_actions/: OrientateAction.hpp  TerminateAction.hpp
source/robot-control/navigation/elastic-band/g2o_types/: BaseTebEdges.hpp  CustomTypes.cpp  EdgeAcceleration.hpp  EdgeDynamicObstacle.hpp  EdgeDynamics.hpp  EdgeKinematics.hpp  EdgeNeighbor.hpp  EdgeObstacle.hpp  EdgePreferRotDir.hpp  EdgeProfileFidelity.hpp  EdgeShortestPath.hpp  EdgeTimeOptimal.hpp  EdgeVelocity.hpp  EdgeViaPoint.hpp  Penalties.hpp  VertexPose.hpp  VertexTimeDiff.hpp
source/robot-control/navigation/elastic-band/kinematics/: Acceleration.hpp  PoseSE2.hpp  Timestamp.hpp  Trajectory.hpp  Velocity.hpp
source/robot-control/settings/: RobotControlSettings.cpp  RobotControlSettings.hpp
source/robot-control/statistics/: StatisticsPublisher.cpp
